--- a/practice/pointcloud.ipynb
+++ b/practice/pointcloud.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a45eed82-bdbd-4f89-85dd-2d51882d41f4",
+   "execution_count": 1,
+   "id": "2b925d9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import open3d as o3d\n",
+    "import laspy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,65 +17,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7722d28c-7028-4494-92b2-c61de3e6b60e",
+   "execution_count": 8,
+   "id": "86d4899f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7390197\n",
+      "<LasData(1.4, point fmt: <PointFormat(1, 8 bytes of extra dims)>, 7390197 points, 1 vlrs)>\n",
+      "7390197\n",
+      "Ground points : 7390197\n"
+     ]
+    }
+   ],
    "source": [
-    "import copy\n",
-    "import os\n",
-    "import sys\n",
-    "import pylas"
+    "with laspy.open(\"./db/pointcloud/original/sample.laz\") as f:\n",
+    "\tprint(f.header.point_count)\n",
+    "\tlas = f.read()\n",
+    "\tprint(las)\n",
+    "\tprint(len(las.points))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "bdb52e2c-bee7-4332-b672-c38166ca9864",
+   "execution_count": 22,
+   "id": "8a26dd48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['X', 'Y', 'Z', 'intensity', 'return_number', 'number_of_returns', 'scan_direction_flag', 'edge_of_flight_line', 'classification', 'synthetic', 'key_point', 'withheld', 'scan_angle_rank', 'user_data', 'point_source_id', 'gps_time', 'Reflectance', 'Deviation']\n"
+     ]
+    }
+   ],
    "source": [
-    "las = pylas.read(\"./db/pointcloud/dtm/sample.las\")"
+    "print([dimension.name for dimension in las.point_format.dimensions])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "d8b5e5a8-daa6-40de-af26-61a9d903dbb5",
+   "execution_count": null,
+   "id": "7a6b940c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ScaledArrayView' object has no attribute 'colors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m points \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstack((las\u001b[38;5;241m.\u001b[39mx, las\u001b[38;5;241m.\u001b[39my, las\u001b[38;5;241m.\u001b[39mz))\n\u001b[0;32m----> 2\u001b[0m colors \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstack((\u001b[43mlas\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolors\u001b[49m))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ScaledArrayView' object has no attribute 'colors'"
+     ]
+    }
+   ],
    "source": [
-    "pts = np.stack((las.x,las.y,las.z)).transpose()\n",
-    "colors = np.stack((las.red,las.green, las.blue)).transpose()\n",
-    "colors = colors / 65535"
+    "points = np.stack((las.x, las.y, las.z))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a89b8693-3ed8-43bf-b1f4-177cd7460090",
+   "execution_count": null,
+   "id": "90d94a69",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pcloud = o3d.geometry.PointCloud()\n",
-    "pcloud.points = o3d.utility.Vector3dVector(pts)\n",
-    "pcloud.colors = o3d.utility.Vector3dVector(colors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "ad577e20-4d21-453a-a9d9-8656f9286331",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o3d.visualization.draw_geometries([pcloud])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
